Fix notice message overlapping with heading

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -86,7 +86,7 @@ a {
 }
 
 .notice-wrapper {
-  margin: 20px auto 0 auto;
+  margin: 35px auto 0 auto;
   height: 16px;
   width: 300px;
   text-align: center;
